# llvm-opt-benchmark-nightly

./: .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
report/: delta-rs-s-delta_benchmarks-398f1d5f8ffb0df5.delta_benchmarks.9ff958f384226cbb-cgu.15.ll  delta-rs-s-deltalake.deltalake.563ccdf0ebbd83e0-cgu.02.ll  delta-rs-s-deltalake.deltalake.563ccdf0ebbd83e0-cgu.05.ll  delta-rs-s-deltalake.deltalake.563ccdf0ebbd83e0-cgu.06.ll  delta-rs-s-deltalake.deltalake.563ccdf0ebbd83e0-cgu.07.ll  delta-rs-s-deltalake.deltalake.563ccdf0ebbd83e0-cgu.08.ll  delta-rs-s-deltalake_aws-9485bf1ee3f83c6f.deltalake_aws.6e131cb766b7c8d6-cgu.01.ll  delta-rs-s-deltalake_aws-9485bf1ee3f83c6f.deltalake_aws.6e131cb766b7c8d6-cgu.04.ll  delta-rs-s-deltalake_aws-9485bf1ee3f83c6f.deltalake_aws.6e131cb766b7c8d6-cgu.13.ll  delta-rs-s-deltalake_catalog_glue-470992b380a1ceea.deltalake_catalog_glue.e707c63c769ad8cb-cgu.04.ll  delta-rs-s-deltalake_catalog_unity-3798fba31c5b02c8.deltalake_catalog_unity.c3c83283175c5f03-cgu.02.ll  delta-rs-s-deltalake_catalog_unity-3798fba31c5b02c8.deltalake_catalog_unity.c3c83283175c5f03-cgu.15.ll  delta-rs-s-deltalake_core-1fa7f9344ca2d0c9.deltalake_core.c7669c1bd09fee8-cgu.05.ll  delta-rs-s-deltalake_core-1fa7f9344ca2d0c9.deltalake_core.c7669c1bd09fee8-cgu.08.ll  delta-rs-s-deltalake_core-1fa7f9344ca2d0c9.deltalake_core.c7669c1bd09fee8-cgu.09.ll  delta-rs-s-deltalake_core-1fa7f9344ca2d0c9.deltalake_core.c7669c1bd09fee8-cgu.12.ll  oiio-s-CDLOpCPU.ll  oiio-s-CDLParser.ll  oiio-s-CTFTransform.ll  (+79 more)
(+2193 files in other folders)
